--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body
 .header
 {
     width: fit-content;
-    font-size: xx-large;
+    font-size: x-large;
     height: fit-content;
     font-variant-caps: titling-caps;
 }
@@ -28,7 +28,7 @@ body
     position:fixed;
     background-color: black;
     color: white;
-    font-size: 20px;
+    font-size: 5%;
     font-weight: bold;
 }
 #footer:hover
@@ -40,7 +40,7 @@ body
 canvas
 {
     background-color: white;
-    margin-top: 9%;
+    margin-top: 9.5%;
     border: 10px solid black;
 }
 .button
