--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body
 }
 .header
 {
-    width: fit-content;
-    font-size: large;
+    width: 100%;
+    font-size: x-large;
     height: fit-content;
     font-variant-caps: titling-caps;
 }
@@ -28,7 +28,7 @@ body
     position:fixed;
     background-color: black;
     color: white;
-    font-size: 5%;
+    font-size: 20px;
     font-weight: bold;
 }
 #footer:hover
@@ -40,7 +40,7 @@ body
 canvas
 {
     background-color: white;
-    margin-top: 9.5%;
+    margin-top: 9%;
     border: 10px solid black;
 }
 .button
